<?xml version="1.0" encoding="utf-8"?>
<!--**************************************************************/
/*                                                               */ 
/* strings.xml                                                   */ 
/* (c)2013 jmarcosf                                              */ 
/*                                                               */ 
/* Description: Application Strings                              */ 
/*              JmfWeather Project                               */ 
/*              Práctica asignatura Android Fundamental          */ 
/*              U-Tad - Master Apps                              */ 
/*              www.u-tad.com                                    */ 
/*                                                               */ 
/*        Date: December 2013                                    */ 
/*                                                               */ 
/***************************************************************-->
<resources>
    <string name="IDS_APP_NAME">JmfWeather</string>
    <string name="IDS_WIDGET">JmfWeather Widget</string>
    <string name="IDS_SETTINGS">Settings</string>
    <string name="IDS_SHARE">Share</string>
    <string name="IDS_OK">OK</string>
    <string name="IDS_CANCEL">Cancel</string>
    <string name="IDS_YES">Yes</string>
    <string name="IDS_NO">No</string>
    <string name="IDS_RETRY">Retry</string>
    <string name="IDS_ERROR">Error</string>
    <string name="IDS_WARNING">Warning</string>
    <string name="IDS_UNKNOWN">Unknown</string>
    <string name="IDS_CELSIUS">Celsius</string>
    <string name="IDS_FAHRENHEIT">Fahrenheit</string>
    <string name="IDS_PRESSURE">Pressure</string>
    <string name="IDS_HUMIDITY">Humidity</string>
    <string name="IDS_VISIBILITY">Visibility</string>
    <string name="IDS_WIND_DIRECTION">Wind Direction</string>
    <string name="IDS_WIND_SPEED">Wind Speed</string>
    <string name="IDS_ADD_CITY">Add City</string>
    <string name="IDS_DELETE_CITY_TITLE">Delete City</string>
    <string name="IDS_DELETE_CITY_QUESTION">Do you really want to delete &lt;b&gt;%1$s&lt;/b&gt;?</string>
    <string name="IDS_SEARCH_HINT">Type City Name to add to the list</string>
    <string name="IDS_SEARCHING_CITY_TITLE">Searching City</string>
    <string name="IDS_SEARCHING_CITY_TEXT">Searching &lt;b&gt;%1$s&lt;/b&gt;. Please wait&#8230;</string>
    <string name="IDS_SELECT_CITY">Select City</string>
    <string name="IDS_WRITING_CITY_TITLE">Writing City</string>
    <string name="IDS_WRITING_CITY_TEXT">Writing City &lt;b&gt;%1$s&lt;/b&gt; to DataBase&#8230;</string>
    <string name="IDS_NETWORK_ERROR_MESSAGE">There is not network connectivity.</string>
    <string name="IDS_NO_CITIES_FOUND_ERROR_MESSAGE">No cities found!.</string>
    <string name="IDS_READ_CITIES_ERROR_MESSAGE">An error occurred reading cities from database.</string>
    <string name="IDS_CITY_TABLE_EMPTY_ERROR_MESSAGE">&lt;p&gt;Welcome to &lt;b&gt;JmfWeather&lt;/b&gt;.&lt;/p&gt;&lt;p&gt;Use &lt;b&gt;Add City&lt;/b&gt; menu button to add your first city.&lt;/p&gt;</string>
    <string name="IDS_WRITE_CITY_ERROR_MESSAGE">An error occurred writing city to database.</string>
    <string name="IDS_DRAWER_MENU_TEXT">Este es un menú lateral implementado con un DrawerLayout. El contenido de este espacio es totalmente arbitrario.</string>
    <string name="IDS_DRAWER_OPEN_TEXT">Se abre el menú</string>
    <string name="IDS_DRAWER_CLOSE_TEXT">Se cierra el menú</string>
    
	<!--**********************************************************/
	/*                                                           */ 
	/* Preferences Strings                                       */ 
	/*                                                           */ 
	/***********************************************************-->
    <string name="IDS_GENERAL">General</string>
    <string name="IDS_PREF_TITLE_INCLUDE_CURRENT_LOCATION_ON_STARTUP">Add current location</string>
    <string name="IDS_PREF_DESC_INCLUDE_CURRENT_LOCATION_ON_STARTUP">Add current location city to list of cities automatically on application startup</string>
    <string name="IDS_PREF_TITLE_DIVIDE_SCREEN_ON_TABLETS">Divide Screen on Tablets</string>
    <string name="IDS_PREF_DESC_DIVIDE_SCREEN_ON_TABLETS">On Landscape Tablets divide the screen in two parts, one for cities and one for details</string>
    
    <string name="IDS_PREF_TITLE_SYNC_FREQUENCY">Weather Sync Frequency</string>
    <string-array name="IDS_ARRAY_SYNC_FREQUENCY_TITLES">
	    <item>15 minutes</item>
	    <item>30 minutes</item>
	    <item>1 hour</item>
	    <item>3 hours</item>
	    <item>6 hours</item>
	    <item>Never</item>
    </string-array>
    <string-array name="IDS_ARRAY_SYNC_FREQUENCY_VALUES">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
	</string-array>
    
    <string name="IDS_PREF_TITLE_DEGREES_UNIT">Degrees Unit</string>
    <string-array name="IDS_ARRAY_DEGREES_UNIT_TITLES">
	    <item>Celsius</item>
	    <item>Fahrenheit</item>
    </string-array>
    <string-array name="IDS_ARRAY_DEGREES_UNIT_VALUES">
        <item>1</item>
        <item>0</item>
	</string-array>
	
	<!--**********************************************************/
	/*                                                           */ 
	/* Weather Code Strings                                      */ 
	/*                                                           */ 
	/***********************************************************-->
   	<string name="IDS_WEATHER_DESC_113">Clear/Sunny</string>
    <string name="IDS_WEATHER_DESC_116">Partly Cloudy</string>
    <string name="IDS_WEATHER_DESC_119">Cloudy</string>
    <string name="IDS_WEATHER_DESC_122">Overcast</string>
    <string name="IDS_WEATHER_DESC_143">Mist</string>
    <string name="IDS_WEATHER_DESC_176">Patchy rain nearby</string>
    <string name="IDS_WEATHER_DESC_179">Patchy snow nearby</string>
    <string name="IDS_WEATHER_DESC_182">Patchy sleet nearby</string>
    <string name="IDS_WEATHER_DESC_185">Patchy freezing drizzle nearby</string>
    <string name="IDS_WEATHER_DESC_200">Thundery outbreaks in nearby</string>
    <string name="IDS_WEATHER_DESC_227">Blowing snow</string>
    <string name="IDS_WEATHER_DESC_230">Blizzard</string>
    <string name="IDS_WEATHER_DESC_248">Fog</string>
    <string name="IDS_WEATHER_DESC_260">Freezing fog</string>
    <string name="IDS_WEATHER_DESC_263">Patchy light drizzle</string>
    <string name="IDS_WEATHER_DESC_266">Light drizzle</string>
    <string name="IDS_WEATHER_DESC_281">Freezing drizzle</string>
    <string name="IDS_WEATHER_DESC_284">Heavy freezing drizzle</string>
    <string name="IDS_WEATHER_DESC_293">Patchy light rain</string>
    <string name="IDS_WEATHER_DESC_296">Light rain</string>
    <string name="IDS_WEATHER_DESC_299">Moderate rain at times</string>
    <string name="IDS_WEATHER_DESC_302">Moderate rain</string>
    <string name="IDS_WEATHER_DESC_305">Heavy rain at times</string>
    <string name="IDS_WEATHER_DESC_308">Heavy rain</string>
    <string name="IDS_WEATHER_DESC_311">Light freezing rain</string>
    <string name="IDS_WEATHER_DESC_314">Moderate or Heavy freezing rain</string>
    <string name="IDS_WEATHER_DESC_317">Light sleet</string>
    <string name="IDS_WEATHER_DESC_320">Moderate or heavy sleet</string>
    <string name="IDS_WEATHER_DESC_323">Patchy light snow</string>
    <string name="IDS_WEATHER_DESC_326">Light snow</string>
    <string name="IDS_WEATHER_DESC_329">Patchy moderate snow</string>
    <string name="IDS_WEATHER_DESC_332">Moderate snow</string>
    <string name="IDS_WEATHER_DESC_335">Patchy heavy snow</string>
    <string name="IDS_WEATHER_DESC_338">Heavy snow</string>
    <string name="IDS_WEATHER_DESC_350">Ice pellets</string>
    <string name="IDS_WEATHER_DESC_353">Light rain shower</string>
    <string name="IDS_WEATHER_DESC_356">Moderate or heavy rain shower</string>
    <string name="IDS_WEATHER_DESC_359">Torrential rain shower</string>
    <string name="IDS_WEATHER_DESC_362">Light sleet showers</string>
    <string name="IDS_WEATHER_DESC_365">Moderate or heavy sleet showers</string>
    <string name="IDS_WEATHER_DESC_368">Light snow showers</string>
    <string name="IDS_WEATHER_DESC_371">Moderate or heavy snow showers</string>
    <string name="IDS_WEATHER_DESC_374">Light showers of ice pellets</string>
    <string name="IDS_WEATHER_DESC_377">Moderate or heavy showers of ice pellets</string>
    <string name="IDS_WEATHER_DESC_386">Patchy light rain in area with thunder</string>
    <string name="IDS_WEATHER_DESC_389">Moderate or heavy rain in area with thunder</string>
    <string name="IDS_WEATHER_DESC_392">Patchy light snow in area with thunder</string>
    <string name="IDS_WEATHER_DESC_395">Moderate or heavy snow in area with thunder</string>
    
</resources>
