<!--**************************************************************/
/*                                                               */ 
/* city_details_menu.xml                                         */ 
/* (c)2013 jmarcosf                                              */ 
/*                                                               */ 
/* Description: City Details Menu                                */ 
/*              JmfWeather Project                               */ 
/*                                                               */ 
/***************************************************************-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:JmfWeather="http://schemas.android.com/apk/res-auto" >
      
   	<item
        android:id="@+id/IDM_DEGREES_CELSIUS"
        JmfWeather:showAsAction="always"
        android:title="@string/IDS_CELSIUS" />

	<item
        android:id="@+id/IDM_DEGREES_FAHRENHEIT"
        JmfWeather:showAsAction="always"
        android:title="@string/IDS_FAHRENHEIT" />

	<item
        android:id="@+id/IDM_SHARE"
        JmfWeather:showAsAction="ifRoom"
        android:title="@string/IDS_SHARE"
        android:icon="@android:drawable/ic_menu_share" />

    <item
        android:id="@+id/IDM_SETTINGS"
        android:showAsAction="always"
        android:title="@string/IDS_SETTINGS"
        android:icon="@android:drawable/ic_menu_preferences" />

</menu>
