<!--**************************************************************/
/*                                                               */ 
/* selector_city_list_item_background.xml                        */ 
/* (c)2013 jmarcosf                                              */ 
/*                                                               */ 
/* Description: City List Item Background                        */ 
/*              JmfWeather Project                               */ 
/*                                                               */ 
/***************************************************************-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:JmfWeather="http://schemas.android.com/apk/res-auto" >
    
   	<item
        android:id="@+id/IDM_SHARE"
        JmfWeather:showAsAction="ifRoom"
        android:title="@string/IDS_SHARE"
        android:icon="@android:drawable/ic_menu_share" />
	
	<item
        android:id="@+id/IDM_ADD_CITY"
        JmfWeather:showAsAction="always"
        android:title="@string/IDS_ADD_CITY"
        android:icon="@android:drawable/ic_menu_add" />
	
	<item
        android:id="@+id/IDM_SETTINGS"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/IDS_SETTINGS"/>
</menu>